crates/iota-e2e-tests/tests/snapshots/snapshot_tests__body_fn.snap
---
source: crates/iota-e2e-tests/tests/snapshot_tests.rs
expression: "run_one(cmds, context).await?"
snapshot_kind: text
---
[
  "iota client objects {ME}",
  [
    {
      "data": {
        "objectId": "0x02d3bd8384cb09bfff93d25fe686a29730b8a678facdb7b64d2d096cf92a3ccf",
        "version": "1",
        "digest": "85ZGJpkDMJ2T5PLWU4FUcpt8DTkxVqDHx2ArCKv3UztP",
        "type": "0x2::coin::Coin<0x2::iota::IOTA>",
        "owner": {
          "AddressOwner": "0x2868fed4dbeb23d2ace3ee3ad6e39061423c5692a2b289b39c643c0baf2d8d85"
        },
        "previousTransaction": "Go8KQxgfEU2yZXuxU4YGeUGoew9syE6KyYZp6BqGecFi",
        "storageRebate": "0",
        "content": {
          "dataType": "moveObject",
          "type": "0x2::coin::Coin<0x2::iota::IOTA>",
          "fields": {
            "balance": "30000000000000000",
            "id": {
              "id": "0x02d3bd8384cb09bfff93d25fe686a29730b8a678facdb7b64d2d096cf92a3ccf"
            }
          }
        }
      }
    },
    {
      "data": {
        "objectId": "0x2a5f0945af24307eb0b76289660d17a92b67f27b8bf7df45851662ad8bbece14",
        "version": "1",
        "digest": "9XXwaTvJMfLxvnznfB6eQ5kQiUAzG69rKcduoH9XuGmJ",
        "type": "0x2::coin::Coin<0x2::iota::IOTA>",
        "owner": {
          "AddressOwner": "0x2868fed4dbeb23d2ace3ee3ad6e39061423c5692a2b289b39c643c0baf2d8d85"
        },
        "previousTransaction": "Go8KQxgfEU2yZXuxU4YGeUGoew9syE6KyYZp6BqGecFi",
        "storageRebate": "0",
        "content": {
          "dataType": "moveObject",
          "type": "0x2::coin::Coin<0x2::iota::IOTA>",
          "fields": {
            "balance": "30000000000000000",
            "id": {
              "id": "0x2a5f0945af24307eb0b76289660d17a92b67f27b8bf7df45851662ad8bbece14"
            }
          }
        }
      }
    },
    {
      "data": {
        "objectId": "0x60edf4f925241ed09d04f4840c7a94708f8e33f573f74965031f1499ce375989",
        "version": "1",
        "digest": "BMge2BSBwPRPpk89iticshszphT7RMvCFn38DQYckPgs",
        "type": "0x2::coin::Coin<0x2::iota::IOTA>",
        "owner": {
          "AddressOwner": "0x2868fed4dbeb23d2ace3ee3ad6e39061423c5692a2b289b39c643c0baf2d8d85"
        },
        "previousTransaction": "Go8KQxgfEU2yZXuxU4YGeUGoew9syE6KyYZp6BqGecFi",
        "storageRebate": "0",
        "content": {
          "dataType": "moveObject",
          "type": "0x2::coin::Coin<0x2::iota::IOTA>",
          "fields": {
            "balance": "30000000000000000",
            "id": {
              "id": "0x60edf4f925241ed09d04f4840c7a94708f8e33f573f74965031f1499ce375989"
            }
          }
        }
      }
    },
    {
      "data": {
        "objectId": "0x62f9164bdb176912c5e89c6804d1887e1a6c713bd4a0fa630b7eeb60a82fd4cd",
        "version": "1",
        "digest": "4MPnkHrJ6zJ6FCokKrvcamxdjtksygZDEDAPWaL3VADU",
        "type": "0x2::coin::Coin<0x2::iota::IOTA>",
        "owner": {
          "AddressOwner": "0x2868fed4dbeb23d2ace3ee3ad6e39061423c5692a2b289b39c643c0baf2d8d85"
        },
        "previousTransaction": "Go8KQxgfEU2yZXuxU4YGeUGoew9syE6KyYZp6BqGecFi",
        "storageRebate": "0",
        "content": {
          "dataType": "moveObject",
          "type": "0x2::coin::Coin<0x2::iota::IOTA>",
          "fields": {
            "balance": "30000000000000000",
            "id": {
              "id": "0x62f9164bdb176912c5e89c6804d1887e1a6c713bd4a0fa630b7eeb60a82fd4cd"
            }
          }
        }
      }
    },
    {
      "data": {
        "objectId": "0x86b568edbb6b1e42e9183e2b08b10bd96271d3a742ec9e9568a34ccf98c3de91",
        "version": "1",
        "digest": "4yC782XceBodmj5gWwaJ4tdTVSCG1fR9CYFaZ9B51SAP",
        "type": "0x2::coin::Coin<0x2::iota::IOTA>",
        "owner": {
          "AddressOwner": "0x2868fed4dbeb23d2ace3ee3ad6e39061423c5692a2b289b39c643c0baf2d8d85"
        },
        "previousTransaction": "Go8KQxgfEU2yZXuxU4YGeUGoew9syE6KyYZp6BqGecFi",
        "storageRebate": "0",
        "content": {
          "dataType": "moveObject",
          "type": "0x2::coin::Coin<0x2::iota::IOTA>",
          "fields": {
            "balance": "30000000000000000",
            "id": {
              "id": "0x86b568edbb6b1e42e9183e2b08b10bd96271d3a742ec9e9568a34ccf98c3de91"
            }
          }
        }
      }
    }
  ],
  "iota client objects 0x0000000000000000000000000000000000000000000000000000000000000000",
  [],
  "iota client object 0x5",
  [
    {
      "data": {
        "objectId": "0x0000000000000000000000000000000000000000000000000000000000000005",
        "version": "1",
        "digest": "G24rPQUFwBy9CR3df9wGByaWp2EbFPYia7dicF8bC1id",
        "type": "0x3::iota_system::IotaSystemState",
        "owner": {
          "Shared": {
            "initial_shared_version": 1
          }
        },
        "previousTransaction": "Go8KQxgfEU2yZXuxU4YGeUGoew9syE6KyYZp6BqGecFi",
        "storageRebate": "0",
        "content": {
          "dataType": "moveObject",
          "type": "0x3::iota_system::IotaSystemState",
          "fields": {
            "id": {
              "id": "0x0000000000000000000000000000000000000000000000000000000000000005"
            },
            "version": "1"
          }
        }
      }
    }
  ],
  "iota client object 0x5 --bcs",
  [
    {
      "data": {
        "objectId": "0x0000000000000000000000000000000000000000000000000000000000000005",
        "version": "1",
        "digest": "G24rPQUFwBy9CR3df9wGByaWp2EbFPYia7dicF8bC1id",
        "type": "0x3::iota_system::IotaSystemState",
        "owner": {
          "Shared": {
            "initial_shared_version": 1
          }
        },
        "previousTransaction": "Go8KQxgfEU2yZXuxU4YGeUGoew9syE6KyYZp6BqGecFi",
        "storageRebate": "0",
        "bcs": {
          "dataType": "moveObject",
          "type": "0x3::iota_system::IotaSystemState",
          "version": 1,
          "bcsBytes": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUBAAAAAAAAAA=="
        }
      }
    }
  ],
  "iota client object 0x4d03f39deb5e27a76a568adb591da553688e6df6fb053bc9ac069f2bd9495ae3",
  [
    {
      "error": {
        "code": "notExists",
        "object_id": "0x4d03f39deb5e27a76a568adb591da553688e6df6fb053bc9ac069f2bd9495ae3"
      }
    }
  ],
  "iota client object 0x4d03f39deb5e27a76a568adb591da553688e6df6fb053bc9ac069f2bd9495ae3 --bcs",
  [
    {
      "error": {
        "code": "notExists",
        "object_id": "0x4d03f39deb5e27a76a568adb591da553688e6df6fb053bc9ac069f2bd9495ae3"
      }
    }
  ],
  "iota client object 0x0000000000000000000000000000000000000000000000000000000000000000",
  [
    {
      "error": {
        "code": "notExists",
        "object_id": "0x0000000000000000000000000000000000000000000000000000000000000000"
      }
    }
  ],
  "iota client tx-block 88FqW2hyUgShTyLcGzbh6scZB45XZYmXpXSxydkBVTPu",
  "ErrorObject { code: InvalidParams, message: \"Could not find the referenced transaction [TransactionDigest(88FqW2hyUgShTyLcGzbh6scZB45XZYmXpXSxydkBVTPu)].\", data: None }",
  "iota client tx-block 11111111111111111111111111111111",
  "ErrorObject { code: InvalidParams, message: \"Could not find the referenced transaction [TransactionDigest(11111111111111111111111111111111)].\", data: None }"
]
